erDiagram
    JOURNEYS ||--o{ JOURNEY_TAGS : has
    TAGS ||--o{ JOURNEY_TAGS : categorizes
    JOURNEYS ||--o{ JOURNEY_MBTI : matches
    MBTI_TYPES ||--o{ JOURNEY_MBTI : assigned
    USERS ||--o{ USER_POINTS_HISTORY : earns
    USERS ||--o{ USER_SAVED_JOURNEYS : saves
    JOURNEYS ||--o{ USER_SAVED_JOURNEYS : saved_as
    USERS ||--o{ ORDERS : places
    ORDERS ||--o{ ORDER_ITEMS : contains
    JOURNEYS ||--o{ ORDER_ITEMS : snapshots
    USERS ||--o{ TRANSACTIONS : has
    ORDERS ||--o{ TRANSACTIONS : generates
    USERS ||--o{ ANALYTICS_EVENTS : may_emit

    JOURNEYS {
        int id PK
        string title
        string slug UK
        string subtitle
        string story_hook
        string story
        string region
        string fantasy_type
        string visual_style
        int adventure_index
        string additional_fields
    }

    TAGS {
        int id PK
        string name UK
        string slug UK
    }

    JOURNEY_TAGS {
        int journey_id FK
        int tag_id FK
    }

    MBTI_TYPES {
        int id PK
        string code UK
        string name
        string description
        string color
    }

    JOURNEY_MBTI {
        int journey_id FK
        int mbti_id FK
        int compatibility_score
    }

    AI_LOGS {
        int id PK
        string session_id
        string role
        string content
        datetime created_at
    }

    USERS {
        int id PK
        string username
        string email UK
        string password_hash
        string role
        int level
        int points
        int balance
        string mbti_type
        string gender
        string additional_fields
    }

    USER_POINTS_HISTORY {
        int id PK
        int user_id FK
        string action_type
        int points_delta
        int balance_after
        string description
        datetime created_at
    }

    USER_SAVED_JOURNEYS {
        int user_id FK
        int journey_id FK
        datetime created_at
    }

    ORDERS {
        int id PK
        string order_no UK
        int user_id FK
        string status
        int total_amount
        string currency
        datetime paid_at
        datetime created_at
        datetime updated_at
    }

    ORDER_ITEMS {
        int id PK
        int order_id FK
        int journey_id FK
        string journey_title
        int unit_price
        int quantity
        int subtotal
    }

    TRANSACTIONS {
        int id PK
        int user_id FK
        int order_id FK
        string txn_type
        int amount
        int balance_after
        string description
        datetime created_at
    }

    ANALYTICS_EVENTS {
        int id PK
        string event_type
        string journey_slug
        int user_id FK
        string mbti_type
        string gender
        string metadata
        datetime created_at
    }

    AUDIT_LOGS {
        int id PK
        string request_id
        string level
        string source
        string method
        string path
        int status_code
        int latency_ms
        string client_ip
        string user_agent
        string additional_fields
    }
